# common

./: .gitignore  CMakeLists.txt  CMakePresets.json
src/: CMakeLists.txt  main.cpp
